vlib/v/checker/tests/cast_expr_T_type_err.out
vlib/v/checker/tests/cast_expr_T_type_err.vv:4:9: error: unknown type `A`
    2 | 
    3 | fn main() {
    4 |     _ = A(0)
      |         ~~~~
    5 |     _ = &A(0)
    6 | }
vlib/v/checker/tests/cast_expr_T_type_err.vv:5:9: error: unknown type `A`
    3 | fn main() {
    4 |     _ = A(0)
    5 |     _ = &A(0)
      |         ~~~~~
    6 | }
